fixed sidebar open/close button, truncate filenames that are too large to fit in sidebar

--- a/darker-notes/WebContent/css/sidebar.css
+++ b/darker-notes/WebContent/css/sidebar.css
@@ -6,11 +6,11 @@
 #sidebarCollapse {
     width: 40px;
     height: 40px;
-    background: #f5f5f5;
+    /* background: #f5f5f5; */
 }
 
 #sidebarCollapse span {
-    width: 80%;
+    width: 100%;
     height: 2px;
     margin: 0 auto;
     display: block;
